@@ -30,6 +30,7 @@ ChangeLog
 [-] * Workaround decoding of messages padded by 0xFF by phone.
 [-] * Recognize Motorola A1200 error replies (bug#1019).
 [-] * Disable AT/Obex for Motorola A1200e (bug#1019).
+[-] * Properly detect if phone does not support AT+MODE (bug#1019).
 
     
 20091012 - 1.26.90
